projects/compiladores/compila-ic1/cmm/parser/cmmParser.py
# Generated from /home/pizetta/Downloads/compila/cmm/parser/cmm.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class cmmParser ( Parser ):

    grammarFileName = "cmm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'('", "')'", "','", "'{'", "'}'", 
                     "'='", "';'", "'print'", "'if'", "'while'", "'for'", 
                     "'switch'", "'return'", "'case'", "':'", "'>'", "'<'", 
                     "'<='", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", 
                     "'/'", "'input'", "'else'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'None'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INPUT", "ELSE", 
                      "ID", "INT", "FLOAT", "NULL", "BOOLEAN", "WS" ]

    RULE_start = 0
    RULE_func = 1
    RULE_args = 2
    RULE_statms = 3
    RULE_statm = 4
    RULE_switchStatms = 5
    RULE_call = 6
    RULE_exprs = 7
    RULE_expr = 8
    RULE_summ = 9
    RULE_mult = 10
    RULE_atom = 11

    ruleNames =  [ "start", "func", "args", "statms", "statm", "switchStatms", 
                   "call", "exprs", "expr", "summ", "mult", "atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    INPUT=27
    ELSE=28
    ID=29
    INT=30
    FLOAT=31
    NULL=32
    BOOLEAN=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(cmmParser.EOF, 0)

        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.FuncContext)
            else:
                return self.getTypedRuleContext(cmmParser.FuncContext,i)


        def getRuleIndex(self):
            return cmmParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = cmmParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cmmParser.T__0:
                self.state = 24
                self.func()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(cmmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def statms(self):
            return self.getTypedRuleContext(cmmParser.StatmsContext,0)


        def ID(self):
            return self.getToken(cmmParser.ID, 0)

        def args(self):
            return self.getTypedRuleContext(cmmParser.ArgsContext,0)


        def getRuleIndex(self):
            return cmmParser.RULE_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = cmmParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(cmmParser.T__0)
            self.state = 33
            localctx.name = self.match(cmmParser.ID)
            self.state = 34
            self.match(cmmParser.T__1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==cmmParser.ID:
                self.state = 35
                self.args()


            self.state = 38
            self.match(cmmParser.T__2)
            self.state = 39
            self.statms()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(cmmParser.ID)
            else:
                return self.getToken(cmmParser.ID, i)

        def getRuleIndex(self):
            return cmmParser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = cmmParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(cmmParser.ID)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cmmParser.T__3:
                self.state = 42
                self.match(cmmParser.T__3)
                self.state = 43
                self.match(cmmParser.ID)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatmsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.StatmContext)
            else:
                return self.getTypedRuleContext(cmmParser.StatmContext,i)


        def getRuleIndex(self):
            return cmmParser.RULE_statms

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatms" ):
                return visitor.visitStatms(self)
            else:
                return visitor.visitChildren(self)




    def statms(self):

        localctx = cmmParser.StatmsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statms)
        self._la = 0 # Token type
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cmmParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.match(cmmParser.T__4)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cmmParser.T__8) | (1 << cmmParser.T__9) | (1 << cmmParser.T__10) | (1 << cmmParser.T__11) | (1 << cmmParser.T__12) | (1 << cmmParser.T__13) | (1 << cmmParser.ID))) != 0):
                    self.state = 50
                    self.statm()
                    self.state = 55
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 56
                self.match(cmmParser.T__5)
                pass
            elif token in [cmmParser.T__8, cmmParser.T__9, cmmParser.T__10, cmmParser.T__11, cmmParser.T__12, cmmParser.T__13, cmmParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.statm()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return cmmParser.RULE_statm

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintContext(StatmContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cmmParser.StatmContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(cmmParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)


    class ForContext(StatmContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cmmParser.StatmContext
            super().__init__(parser)
            self.cond = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.ExprContext)
            else:
                return self.getTypedRuleContext(cmmParser.ExprContext,i)

        def statms(self):
            return self.getTypedRuleContext(cmmParser.StatmsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StatmContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cmmParser.StatmContext
            super().__init__(parser)
            self.cond = None # ExprContext
            self.copyFrom(ctx)

        def statms(self):
            return self.getTypedRuleContext(cmmParser.StatmsContext,0)

        def expr(self):
            return self.getTypedRuleContext(cmmParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(StatmContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cmmParser.StatmContext
            super().__init__(parser)
            self.cond = None # ExprContext
            self.then = None # StatmsContext
            self.otherwise = None # StatmsContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(cmmParser.ExprContext,0)

        def statms(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.StatmsContext)
            else:
                return self.getTypedRuleContext(cmmParser.StatmsContext,i)

        def ELSE(self):
            return self.getToken(cmmParser.ELSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class ReturnContext(StatmContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cmmParser.StatmContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(cmmParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatmContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cmmParser.StatmContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(cmmParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(cmmParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)


    class SwitchContext(StatmContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a cmmParser.StatmContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(cmmParser.AtomContext,0)

        def switchStatms(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.SwitchStatmsContext)
            else:
                return self.getTypedRuleContext(cmmParser.SwitchStatmsContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitch" ):
                return visitor.visitSwitch(self)
            else:
                return visitor.visitChildren(self)



    def statm(self):

        localctx = cmmParser.StatmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statm)
        self._la = 0 # Token type
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cmmParser.ID]:
                localctx = cmmParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(cmmParser.ID)
                self.state = 61
                self.match(cmmParser.T__6)
                self.state = 62
                self.expr()
                self.state = 63
                self.match(cmmParser.T__7)
                pass
            elif token in [cmmParser.T__8]:
                localctx = cmmParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(cmmParser.T__8)
                self.state = 66
                self.expr()
                self.state = 67
                self.match(cmmParser.T__7)
                pass
            elif token in [cmmParser.T__9]:
                localctx = cmmParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.match(cmmParser.T__9)
                self.state = 70
                localctx.cond = self.expr()
                self.state = 71
                localctx.then = self.statms()
                self.state = 74
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 72
                    self.match(cmmParser.ELSE)
                    self.state = 73
                    localctx.otherwise = self.statms()


                pass
            elif token in [cmmParser.T__10]:
                localctx = cmmParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 76
                self.match(cmmParser.T__10)
                self.state = 77
                localctx.cond = self.expr()
                self.state = 78
                self.statms()
                pass
            elif token in [cmmParser.T__11]:
                localctx = cmmParser.ForContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.match(cmmParser.T__11)
                self.state = 81
                self.match(cmmParser.T__1)
                self.state = 82
                localctx.cond = self.expr()
                self.state = 83
                self.match(cmmParser.T__7)
                self.state = 84
                localctx.cond = self.expr()
                self.state = 85
                self.match(cmmParser.T__7)
                self.state = 86
                self.expr()
                self.state = 87
                self.match(cmmParser.T__2)
                self.state = 88
                self.statms()
                pass
            elif token in [cmmParser.T__12]:
                localctx = cmmParser.SwitchContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 90
                self.match(cmmParser.T__12)
                self.state = 91
                self.match(cmmParser.T__1)
                self.state = 92
                self.atom()
                self.state = 93
                self.match(cmmParser.T__2)
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 94
                    self.switchStatms()
                    self.state = 97 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==cmmParser.T__4):
                        break

                pass
            elif token in [cmmParser.T__13]:
                localctx = cmmParser.ReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 99
                self.match(cmmParser.T__13)
                self.state = 100
                self.expr()
                self.state = 101
                self.match(cmmParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStatmsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(cmmParser.AtomContext,0)


        def switchStatms(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.SwitchStatmsContext)
            else:
                return self.getTypedRuleContext(cmmParser.SwitchStatmsContext,i)


        def getRuleIndex(self):
            return cmmParser.RULE_switchStatms

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchStatms" ):
                return visitor.visitSwitchStatms(self)
            else:
                return visitor.visitChildren(self)




    def switchStatms(self):

        localctx = cmmParser.SwitchStatmsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_switchStatms)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(cmmParser.T__4)
            self.state = 106
            self.match(cmmParser.T__14)
            self.state = 107
            self.atom()
            self.state = 108
            self.match(cmmParser.T__15)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cmmParser.T__4:
                self.state = 109
                self.switchStatms()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(cmmParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(cmmParser.ID, 0)

        def exprs(self):
            return self.getTypedRuleContext(cmmParser.ExprsContext,0)


        def getRuleIndex(self):
            return cmmParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = cmmParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            localctx.name = self.match(cmmParser.ID)
            self.state = 118
            self.match(cmmParser.T__1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cmmParser.T__1) | (1 << cmmParser.INPUT) | (1 << cmmParser.ID) | (1 << cmmParser.INT) | (1 << cmmParser.FLOAT) | (1 << cmmParser.NULL) | (1 << cmmParser.BOOLEAN))) != 0):
                self.state = 119
                self.exprs()


            self.state = 122
            self.match(cmmParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.ExprContext)
            else:
                return self.getTypedRuleContext(cmmParser.ExprContext,i)


        def getRuleIndex(self):
            return cmmParser.RULE_exprs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprs" ):
                return visitor.visitExprs(self)
            else:
                return visitor.visitChildren(self)




    def exprs(self):

        localctx = cmmParser.ExprsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exprs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.expr()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cmmParser.T__3:
                self.state = 125
                self.match(cmmParser.T__3)
                self.state = 126
                self.expr()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # SummContext
            self.op = None # Token
            self.right = None # ExprContext

        def summ(self):
            return self.getTypedRuleContext(cmmParser.SummContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.ExprContext)
            else:
                return self.getTypedRuleContext(cmmParser.ExprContext,i)


        def getRuleIndex(self):
            return cmmParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = cmmParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            localctx.left = self.summ()
            self.state = 137
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 133
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cmmParser.T__16) | (1 << cmmParser.T__17) | (1 << cmmParser.T__18) | (1 << cmmParser.T__19) | (1 << cmmParser.T__20) | (1 << cmmParser.T__21))) != 0)):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 134
                    localctx.right = self.expr() 
                self.state = 139
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SummContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # MultContext
            self.op = None # Token
            self.right = None # SummContext

        def mult(self):
            return self.getTypedRuleContext(cmmParser.MultContext,0)


        def summ(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.SummContext)
            else:
                return self.getTypedRuleContext(cmmParser.SummContext,i)


        def getRuleIndex(self):
            return cmmParser.RULE_summ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumm" ):
                return visitor.visitSumm(self)
            else:
                return visitor.visitChildren(self)




    def summ(self):

        localctx = cmmParser.SummContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_summ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            localctx.left = self.mult()
            self.state = 145
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 141
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==cmmParser.T__22 or _la==cmmParser.T__23):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 142
                    localctx.right = self.summ() 
                self.state = 147
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # AtomContext
            self.op = None # Token
            self.right = None # MultContext

        def atom(self):
            return self.getTypedRuleContext(cmmParser.AtomContext,0)


        def mult(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cmmParser.MultContext)
            else:
                return self.getTypedRuleContext(cmmParser.MultContext,i)


        def getRuleIndex(self):
            return cmmParser.RULE_mult

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMult" ):
                return visitor.visitMult(self)
            else:
                return visitor.visitChildren(self)




    def mult(self):

        localctx = cmmParser.MultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_mult)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            localctx.left = self.atom()
            self.state = 153
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 149
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==cmmParser.T__24 or _la==cmmParser.T__25):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 150
                    localctx.right = self.mult() 
                self.state = 155
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(cmmParser.ExprContext,0)


        def INT(self):
            return self.getToken(cmmParser.INT, 0)

        def FLOAT(self):
            return self.getToken(cmmParser.FLOAT, 0)

        def NULL(self):
            return self.getToken(cmmParser.NULL, 0)

        def BOOLEAN(self):
            return self.getToken(cmmParser.BOOLEAN, 0)

        def ID(self):
            return self.getToken(cmmParser.ID, 0)

        def INPUT(self):
            return self.getToken(cmmParser.INPUT, 0)

        def call(self):
            return self.getTypedRuleContext(cmmParser.CallContext,0)


        def getRuleIndex(self):
            return cmmParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = cmmParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_atom)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(cmmParser.T__1)
                self.state = 157
                self.expr()
                self.state = 158
                self.match(cmmParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(cmmParser.INT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.match(cmmParser.FLOAT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 162
                self.match(cmmParser.NULL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 163
                self.match(cmmParser.BOOLEAN)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 164
                self.match(cmmParser.ID)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 165
                self.match(cmmParser.INPUT)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 166
                self.call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





